# Proyecto-2025A

./: .gitignore  LICENSE  README.md  exec.py  pyproject.toml  requirements.txt  resultados.xlsx
.docs/: application.md  dp.md  error.md  errors.md
.docs/.solutions/: P1G2-2024-2.md
.docs/.strategies/: qnodes-strat.md
.docs/.strategies/qnodes/: ~$EjemploQNodesV1.xlsx
.docs/diagrams/: classes.md  components.md
.docs/strategies/: qnodes-logic.md  qnodes-strat.md
.tests/: PruebasIniciales.xlsx  pruebas.xlsx
books/: notes.tex
src/: alt.py  main.py
src/.samples/: N3A.csv
src/.samples/xlsx/: N5.xlsx
src/constants/: base.py  models.py
src/controllers/: manager.py
src/controllers/strategies/: branch.py  force.py  phi.py  q_nodes.py
src/funcs/: base.py  format.py  system.py
src/middlewares/: observer.py  profile.py  slogger.py
src/models/base/: aplication.py  application.py  loader.py  manager.py  sia.py
src/models/core/: ncube.py  solution.py  system.py
src/models/enums/: distance.py  notation.py
src/models/logic/: force.py  phi.py  q_nodes.py  qlogs.py
src/models/strategies/: force.py  phi.py  q_nodes.py
src/samples/: N15B.csv
src/samples/xlsx/: N10.xlsx  N3.xlsx  N4.xlsx  N6.xlsx  N8.xlsx
src/testing/: initials.py  pruebas.xlsx  resultados.xlsx  resultados_pyphi.xlsx
src/tests/: grupos.md  propias.py  pruebas.py  redes.py  resultados.xlsx
src/video/: hyper.py
