[project]
name = "proyecto-2025a"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "numpy==1.26.4",
    "pyphi==1.2.0",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "pyinstrument==5.0.1",
    "pyttsx3==2.98",
    "colorama==0.4.6",
]
